--- a/weather.css
+++ b/weather.css
@@ -38,6 +38,7 @@ button[type="submit"]:hover {
 .card {
   background: linear-gradient(180deg, hsl(210, 100%, 75%), hsl(40, 100%, 75%));
   padding: 50px;
+  border-radius: 10px;
   box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.5);
   min-width: 300px;
   display: flex;
@@ -77,4 +78,10 @@ p {
 .weatherEmoji {
   margin: 0;
   font-size: 7.5rem;
+}
+
+.errorDisplay{
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: hsla(0, 0%, 0%, 0.75);
 }
